# ciofs3-skill-assessment

./: README.md  environment.yml  pyproject.toml
ciofs3_skill_assessment/: cook_inlet_regions.geojson  make_regions.py  plot_adcp_time_series_from_full_depth.py  plot_ctd_profiles_from_ctd_transects.py  plot_hfradar_ss.py  plot_tidal_ellipses.py  run_adcp_comparisons.py  run_ctd_profiles_comparisons.py  run_ctd_transects_comparisons.py  run_hfradar_comparisons.py  run_moorings_comparisons.py  taylorDiagram.py  taylor_diagrams.md  write_model_catalog.py
ciofs3_skill_assessment/report/: generate_comparison_pages.py  more_utils.py  overview_adcp.md  overview_ctd_profiles.md  overview_ctd_transects.md  overview_hfradar.md  overview_moorings.md  prep_for_interactive_report.py  prep_for_pdf.py
ciofs3_skill_assessment/report/adcp_moored_noaa_coi_2005/: adcp_moored_noaa_coi_2005.md  adcp_moored_noaa_coi_2005_ciofs3  adcp_moored_noaa_coi_2005_ciofs_fresh  adcp_moored_noaa_coi_2005_ciofs_hindcast
ciofs3_skill_assessment/report/adcp_moored_noaa_coi_other/: adcp_moored_noaa_coi_other.md  adcp_moored_noaa_coi_other_ciofs3  adcp_moored_noaa_coi_other_ciofs_fresh  adcp_moored_noaa_coi_other_ciofs_hindcast
ciofs3_skill_assessment/report/adcp_moored_noaa_kod_1/: adcp_moored_noaa_kod_1.md  adcp_moored_noaa_kod_1_ciofs3  adcp_moored_noaa_kod_1_ciofs_fresh  adcp_moored_noaa_kod_1_ciofs_hindcast
ciofs3_skill_assessment/report/adcp_moored_noaa_kod_2/: adcp_moored_noaa_kod_2.md  adcp_moored_noaa_kod_2_ciofs3  adcp_moored_noaa_kod_2_ciofs_fresh  adcp_moored_noaa_kod_2_ciofs_hindcast
(+4130 files in other folders)
