[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciofs-skill-assessment"
version = "0.1.0"
description = "A project for assessing the skill of the CIOFS ocean models."
authors = [
    { name = "Kristen Thyng", email = "kristen@axiomdatascience.com" }
]
license = { text = "MIT" }
dependencies = [
    "intake>=0.6.0",
    "hvplot>=0.7.0",
    "ocean-model-skill-assessor>=0.1.0",
    "pandas>=1.3.0",
    "cmocean>=2.0.0",
    "ipython>=7.0.0",
    "nbformat>=5.0.0",
    "matplotlib>=3.4.0",
    "datetimerange>=0.8.0",
    "pyyaml>=5.4.0",
    "seaborn>=0.11.0",
    "numpy>=1.21.0",
    "pathlib>=1.0.1",
    "xarray>=0.18.0",
    "cf-pandas>=0.1.0"
]

[project.urls]
homepage = "https://github.com/axiom-data-science/ciofs-skill-assessment"
repository = "https://github.com/axiom-data-science/ciofs-skill-assessment"